--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
         <div class="row justify-content-center mt-5">
           <div class="col-md-6 text-center ftco-animate">
-            <p><a href="https://github.com/KINGGo12" target="_blank" class="btn btn-white btn-outline-white py-3 px-4">GitHub</a> <a href="https://www.linkedin.com/in/gowrishhb5" target="_blank" class="btn btn-primary py-3 px-4">LinkedIn</a>  <a href="Gowrish-Resume.pdf" target="_blank" class="btn btn-white btn-outline-white py-3 px-4">Resume</a></p>
+            <p><a href="https://github.com/gowrish005" target="_blank" class="btn btn-white btn-outline-white py-3 px-4">GitHub</a> <a href="https://www.linkedin.com/in/gowrishhb5" target="_blank" class="btn btn-primary py-3 px-4">LinkedIn</a>  <a href="Gowrish-Resume.pdf" target="_blank" class="btn btn-white btn-outline-white py-3 px-4">Resume</a></p>
           </div>
         </div>
       </div>
@@ -667,7 +667,7 @@
               </div>
               <div class="text">
                 <h3 class="mb-4">GitHub</h3>
-                <p><a href="https://github.com/KINGGo12" target="_blank">github.com/KINGGo12</a></p>
+                <p><a href="https://github.com/gowrish005" target="_blank">github.com/gowrish005</a></p>
               </div>
             </div>
           </div>
