--- a/index.html
+++ b/index.html
@@ -22,7 +22,80 @@
     <link rel="stylesheet" href="css/style.css">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+  <style>
+
+    .portfolio-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      padding: 20px;
+    }
+
+    .portfolio-item {
+      width: calc(33.333% - 20px); /* Fits 3 items per row */
+      background-color: #1A1A1A;
+      box-shadow: 0 4px 8px rgba(255, 255, 255, 0);
+      border-radius: 4px;
+      overflow: hidden;
+      transition: transform 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      margin-bottom: 20px;
+      box-sizing: border-box;
+      
+    }
+
+    .portfolio-item:hover {
+      transform: translateY(-5px);
+    }
+
+    .portfolio-item img {
+      width: 100%;
+      height: auto;
+      max-height: 200px;
+      object-fit: cover;
+      object-position: top;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .portfolio-description {
+      padding: 15px;
+
+    }
+
+    .portfolio-description h2 {
+      font-size: 1.2em;
+      margin: 10px 0 5px;
+      color: #ffffff;
+    }
+
+    .portfolio-description p {
+      font-size: 1em;
+      color: #666;
+      text-align: justify;
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 768px) {
+      .portfolio-item {
+        width: calc(50% - 20px); /* 2 items per row on tablets */
+      }
+    }
+
+    @media (max-width: 480px) {
+      .portfolio-item {
+        width: 100%; /* Full width on smaller screens */
+      }
+    }
+
+  </style>
+
   </head>
+
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
@@ -36,6 +109,7 @@
           <ul class="navbar-nav nav ml-auto">
             <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
             <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
+            <li class="nav-item"><a href="#work-section" class="nav-link"><span>Works</span></a></li>
             <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Experience</span></a></li>
             <li class="nav-item"><a href="#services-section" class="nav-link"><span>Skills</span></a></li>
             <!-- <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Progress</span></a></li> -->
@@ -119,6 +193,388 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <section id="work-section">
+      <br><br><br>
+      <div class="row justify-content-center pb-5">
+        <div class="col-md-12 heading-section text-center ftco-animate">
+          <h1 class="big big-2">Works</h1>
+          <h2 class="mb-4">Works</h2>
+          <p>My graphic design experience highlights my creative skills and technical expertise, allowing me to <br>
+            deliver impactful visuals that effectively communicate brand messages. Each project showcases my commitment <br>
+            to quality and innovation in design.</p>
+        </div>
+      </div>
+
+      <main class="portfolio-container">
+        <!-- Portfolio Item 1 -->
+        <a
+          href="images/work/works (1).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (1).png" alt="Portfolio Item 1" />
+          <div class="portfolio-description">
+            <h2>Big Dreams Group Technical Training</h2>
+            <p>Invitation for team leaders to attend a Technical Training Program on the 24th and 25th of the month at Hotel La Classic, Bengaluru. Includes a QR code for easy location access and the Big Dreams Group logo and website.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 2 -->
+        <a
+          href="images/work/works (2).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (2).png" alt="Portfolio Item 2" />
+          <div class="portfolio-description">
+            <h2>Debate Competition Flyer</h2>
+            <p>This vibrant flyer promotes a debate competition organized by the IEEE Student Branch of Cambridge Institute of Technology North Campus. It includes details about the organizers, the competition date, venue, and a QR code for registration.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 3 -->
+        <a
+          href="images/work/works (3).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (3).png" alt="Portfolio Item 3" />
+          <div class="portfolio-description">
+            <h2>IEEE Student Club Logo</h2>
+            <p>A circular logo representing the IEEE Student Club at Cambridge Institute of Technology North Campus. The logo features the IEEE acronym and technical symbols.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 4 -->
+        <a
+          href="images/work/works (4).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (4).png" alt="Portfolio Item 4" style="object-position: center;"/>
+          <div class="portfolio-description">
+            <h2>Query Stromer's 2K24 Logo</h2>
+            <p>A dynamic logo design representing the intersection of thought and communication for "Query Stromer's 2K24"</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 5 -->
+        <a
+          href="images/work/works (5).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (5).png" alt="Portfolio Item 5" />
+          <div class="portfolio-description">
+            <h2>Hell Craft Network: A Minecraft Adventure</h2>
+            <p>The image captures the essence of player interaction, combat, and exploration within this virtual world.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 6 -->
+        <a
+          href="images/work/works (6).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (6).png" alt="Portfolio Item 6" />
+          <div class="portfolio-description">
+            <h2>Pixelated Hell Beast</h2>
+            <p>A pixelated illustration of a fearsome, otherworldly creature. Its imposing stature and menacing expression suggest a powerful and dangerous entity. </p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 7 -->
+        <a
+          href="images/work/works (7).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (7).png" alt="Portfolio Item 7" style="object-position: center;"/>
+          <div class="portfolio-description">
+            <h2>Indi Craft Logo</h2>
+            <p>A vibrant and artistic logo for "Indi Craft," featuring a stylized font and a backdrop inspired by Indian culture.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 8 -->
+        <a
+          href="images/work/works (8).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (8).png" alt="Portfolio Item 8" />
+          <div class="portfolio-description">
+            <h2>Color-Graded Campus Photo</h2>
+            <p>A captivating photo of the Cambridge Institute of Technology North Campus, enhanced with a stunning color grade.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 9 -->
+        <a
+          href="images/work/works (9).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (9).png" alt="Portfolio Item 9" style="object-position: center;"/>
+          <div class="portfolio-description">
+            <h2>Hell Craft Logo</h2>
+            <p>A bold and fiery logo for "Hell Craft," featuring a stylized "H" symbol set against a dramatic, hellish backdrop.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 10 -->
+        <a
+          href="images/work/works (10).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (10).png" alt="Portfolio Item 10" />
+          <div class="portfolio-description">
+            <h2>Certificate of Participation</h2>
+            <p>A colorful and visually appealing certificate recognizing Yaswanth Simha Reddy's participation in the IEEE Tech Tussel Debate Competition hosted at CITNC</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 11 -->
+        <a
+          href="images/work/works (11).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (11).png" alt="Portfolio Item 11" />
+          <div class="portfolio-description">
+            <h2>Tech Tussle: IEEE Debate Competition</h2>
+            <p>The poster highlights the event's theme of "Tech Tussle," inviting participants to engage in thought-provoking debates on emerging technologies.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 12 -->
+        <a
+          href="images/work/works (12).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (12).png" alt="Portfolio Item 12" />
+          <div class="portfolio-description">
+            <h2>Tech Tussle: IEEE Debate Competition</h2>
+            <p>The poster features a playful illustration of two individuals debating, emphasizing the interactive and engaging nature of the event.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 13 -->
+        <a
+          href="images/work/works (13).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (13).png" alt="Portfolio Item 13" />
+          <div class="portfolio-description">
+            <h2>Satyanarayana Bhagwan Puja Invitation</h2>
+            <p>An elegant invitation card for a Satyanarayana Bhagwan Puja, featuring a traditional design with a focus on prayer and devotion. The card includes details about the date, time, and venue of the event.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 14 -->
+        <a
+          href="images/work/works (14).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (14).png" alt="Portfolio Item 14" style="object-position: center;"/>
+          <div class="portfolio-description">
+            <h2>Epic Essentials Logo</h2>
+            <p>A simple and elegant logo for a brand named "Epic Essentials." The handwritten font and soft brushstroke background create a warm and inviting feel.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 15 -->
+        <a
+          href="images/work/works (15).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (15).png" alt="Portfolio Item 15" style="object-position: center;"/>
+          <div class="portfolio-description">
+            <h2>Epic Essentials Logo</h2>
+            <p>A clean and minimalist logo design for "Epic Essentials," framed by lush tropical leaves. The simple yet elegant typography and natural elements create a sense of freshness and vitality.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 16 -->
+        <a
+          href="images/work/works (16).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (16).png" alt="Portfolio Item 16" />
+          <div class="portfolio-description">
+            <h2>Minimalist Designer Portfolio Cover</h2>
+            <p> A clean and minimalist portfolio cover showcasing my name, and a brief statement about their design philosophy: focusing on brevity & minimalism.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 17 -->
+        <a
+          href="images/work/works (17).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (17).png" alt="Portfolio Item 17" />
+          <div class="portfolio-description">
+            <h2>Tech Tussle: IEEE Debate Competition</h2>
+            <p>The poster features a simple illustration of two people engaged in a conversation, symbolizing the debate and discussion that will take place during the event.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 18 -->
+        <a
+          href="images/work/works (18).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (18).png" alt="Portfolio Item 18" />
+          <div class="portfolio-description">
+            <h2>IndiCraftMC Logo</h2>
+            <p>A bold and colorful logo for the IndiCraftMC community, featuring a stylized font and the iconic Minecraft block texture. The design evokes a sense of fun, creativity, and community.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 19 -->
+        <a
+          href="images/work/works (19).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (19).png" alt="Portfolio Item 19" />
+          <div class="portfolio-description">
+            <h2>IEEE Tech Tussle: Debate Competition</h2>
+            <p>The poster features a dynamic illustration of two people debating, along with key information about the event, including the topics, prizes, and registration details.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 20 -->
+        <a
+          href="images/work/works (20).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (20).png" alt="Portfolio Item 20" />
+          <div class="portfolio-description">
+            <h2>IndiCraftMC End Update</h2>
+            <p>The poster showcases a stunning image of the End, highlighting the new spawn point and the introduction of random teleportation. It also emphasizes the need for specific permissions to access this dimension.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 21 -->
+        <a
+          href="images/work/works (21).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (21).png" alt="Portfolio Item 21" />
+          <div class="portfolio-description">
+            <h2>Nandi Tech Solutions</h2>
+            <p>This flyer advertises Nandi Tech Solutions, a computer repair and sales service. It highlights their range of services, including computer and laptop sales, expert repairs, software installations, and troubleshooting.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 22 -->
+        <a
+          href="images/work/works (22).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (22).png" alt="Portfolio Item 22" />
+          <div class="portfolio-description">
+            <h2>GTA V Live Stream | Story Mode</h2>
+            <p>This is a thumbnail for a YouTube live stream featuring gameplay of Grand Theft Auto V (GTA V) in Story Mode. The thumbnail includes the game's logo and text indicating that the stream is live.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 23 -->
+        <a
+          href="images/work/works (23).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (23).png" alt="Portfolio Item 23" />
+          <div class="portfolio-description">
+            <h2>Trinity Tech: Building Affordable</h2>
+            <p>The design features a laptop, tablet, and coffee cup arranged on a black surface, along with the company logo and tagline. The overall aesthetic is clean, modern, and professional.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 24 -->
+        <a
+          href="images/work/works (24).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (24).png" alt="Portfolio Item 24" style="object-position: center;"/>
+          <div class="portfolio-description">
+            <h2>Trinity Tech Logo</h2>
+            <p>The logo features a stylized trinity symbol, representing the company's commitment to quality, affordability, and customer satisfaction. The minimalist design and clean typography reinforce the brand's focus on simplicity and efficiency.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 25 -->
+        <a
+          href="images/work/works (25).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (25).png" alt="Portfolio Item 25" />
+          <div class="portfolio-description">
+            <h2>Wedding Invitation V-1</h2>
+            <p>The invitation features a minimalist design with a focus on greenery and watercolor elements. The couple's names are prominently displayed, along with the date, time, and venue of the wedding.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 26 -->
+        <a
+          href="images/work/works (26).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (26).png" alt="Portfolio Item 26" />
+          <div class="portfolio-description">
+            <h2>Wedding Invitation V-2</h2>
+            <p>The invitation features a romantic design with a focus on soft pink flowers and a delicate watercolor background. The couple's names are elegantly displayed, along with the date, time, and venue of the wedding.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 27 -->
+        <a
+          href="images/work/works (27).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (27).png" alt="Portfolio Item 27" />
+          <div class="portfolio-description">
+            <h2>Wedding Invitation V-3</h2>
+            <p>The card features a vintage-inspired design with a focus on vibrant marigold flowers. The couple's names are elegantly displayed, along with the date, time, and venue of the wedding.</p>
+          </div>
+        </a>
+  
+        <!-- Portfolio Item 28 -->
+        <a
+          href="images/work/works (28).png"
+          target="_blank"
+          class="portfolio-item"
+        >
+          <img src="images/work/works (28).png" alt="Portfolio Item 28" />
+          <div class="portfolio-description">
+            <h2>TUTEE-AIO Logo</h2>
+            <p> This logo features a red apple with a pink heart on top, resting on a stack of colorful books. The text "TUTEE-A10" is displayed on a purple banner at the bottom. The logo is for a tutoring service or educational platform, emphasizing the importance of knowledge and learning.</p>
+          </div>
+        </a>
+  
+        <!-- Add more portfolio items as needed -->
+        <!-- Ensure to replace the title and description for each item -->
+      </main>
     </section>
 
     <section class="ftco-section" id="resume-section">
